<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bank App</string>
    <string name="name">Name :</string>
    <string name="account_no">Account No :</string>
    <string name="email">Email :</string>
    <string name="ifsc_code">IFSC Code :</string>
    <string name="mobile_no">Mobile No :</string>
    <string name="current_balance">Current Balance :</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="done">Done</string>
    <string name="image">image</string>
    <string name="transaction_completed_successfully">Transaction completed Successfully!!</string>
    <string name="return_to_home">Return To Home</string>
    <string name="no_transactions_yet">No Transactions Yet</string>
    <string name="view_all_customers">View All Customers</string>
    <string name="transaction_history">Transaction History</string>
    <string name="exit">Exit</string>
    <string name="select_a_user_to_transfer_money">Select a user to transfer money</string>
    <string name="bhawana">Bhawana</string>
    <string name="_00445588964512">00445588964512</string>
    <string name="amount">Amount</string>
    <string name="_45000">45000</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="transaction_cancelled">Transaction Cancelled</string>
    <string name="rs">Rs.</string>
</resources>