<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/llCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgPersonView"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_person"
            android:layout_margin="5dp"
            android:padding="6dp"
            android:layout_weight="0.5"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="2dp"
                android:text="@string/bhawana"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewAccountPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewCustomerName"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:padding="6dp"
                android:text="@string/_00445588964512"
                android:textSize="14sp"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.0">

            <TextView
                android:id="@+id/textAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/amount"
                android:textSize="16sp"
                android:textStyle="italic"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAmount"
                android:layout_centerHorizontal="true"
                android:padding="4dp"
                android:text="@string/_45000"
                android:textColor="@color/text_color"
                android:textFontWeight="@integer/material_motion_duration_medium_2"
                android:textSize="16sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>