<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.CustomerDataActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_customer_data_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorAccent"/>

    <ImageView
        android:padding="5dp"
        android:src="@drawable/ic_action_person"
        android:requiresFadingEdge="horizontal"
        android:fadingEdge="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <LinearLayout
        android:padding="5dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:fontFamily="serif"
            android:text="@string/name"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:textAlignment="textEnd"
            android:fontFamily="serif"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:textColor="@color/grey_splash"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:text="@string/account_no"/>

        <TextView
            android:id="@+id/account_no"
            android:textAlignment="textEnd"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textColor="@color/grey_splash"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:text="@string/email"/>

        <TextView
            android:id="@+id/email_id"
            android:textAlignment="textEnd"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textColor="@color/grey_splash"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:text="@string/ifsc_code"/>

        <TextView
            android:id="@+id/ifsc_id"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textColor="@color/grey_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:text="@string/mobile_no"/>

        <TextView
            android:id="@+id/phone_no"
            android:textColor="@color/grey_splash"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:text="@string/current_balance"/>

        <TextView
            android:id="@+id/avail_balance"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textColor="@color/grey_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

        <Button
            android:id="@+id/transfer_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="100dp"
            android:backgroundTint="@color/text_color"
            android:fontFamily="serif-monospace"
            android:padding="5dp"
            android:text="@string/transfer_money"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>